--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
-                    <img src="./A1.jpg" alt="">
+                    <img src="A1.jpg" alt="">
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title" style="color: white;">About me</h1>
